# wedding-guest-list

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  manage.py  pyproject.toml  requirements.txt  setup.cfg
app/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  constants.py  data.py  managers.py  models.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_auto_20201012_0956.py  0003_auto_20201012_1309.py  0004_auto_20201013_1537.py  0005_auto_20201014_1018.py  0006_invite_confirmed.py  0007_auto_20201014_1234.py  0008_auto_20201015_1303.py  0009_auto_20201015_1306.py  0010_attendee_confirmed.py  0011_auto_20201015_1517.py  0012_auto_20201015_2131.py  0013_auto_20201017_1252.py  0014_remove_attendee_confirmed.py  0015_auto_20201017_1608.py  0016_user_residence.py  0017_auto_20201116_1339.py  0018_auto_20201116_1351.py  0019_auto_20201116_1730.py  0020_auto_20201118_0811.py  0021_auto_20201119_0930.py  0022_auto_20201119_0933.py  0023_auto_20201119_0950.py  0024_attendee_seat.py  0025_auto_20201202_2106.py  0026_settings.py
core/templatetags/: formatter.py
public/static/css/: error_page.css  main.css  simple-sidebar.css  style.css
public/static/js/: scripts.js  vendors.min.js
public/static/sass/components/: _image.scss
public/static/sass/layout/: _bg.scss
public/templates/: 403.html  503.html  base.html  blank.html  dashboard.html  index.html  login.html  maintenance.html  setup.html
scripts/: pre-commit.sh
